# autonomy_metrics_logger

./: README.md
src/autonomy_metrics/: package.xml  setup.py
src/autonomy_metrics/autonomy_metrics/: db_mgr.py  git_utils.py  metric_logger.py  navigation_area_tracker.py  path_deviation_tracker.py  topic_utils.py
src/autonomy_metrics/config/: metrics_full.yaml  metrics_test.yaml
src/autonomy_metrics/launch/: autonomy_metrics.launch.py
src/autonomy_metrics_webui/: package.xml  setup.cfg  setup.py
src/autonomy_metrics_webui/autonomy_metrics_webui/: __init__.py  webui_server.py
src/autonomy_metrics_webui/autonomy_metrics_webui/static/: dashboard.css  dashboard.js
src/autonomy_metrics_webui/autonomy_metrics_webui/templates/: index.html
src/autonomy_metrics_webui/launch/: autonomy_metrics_webui.launch.py
src/autonomy_metrics_webui/resource/: autonomy_metrics_webui
tools/: fake_autonomy_metrics_stream.py
