<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomy_metrics</name>
  <version>0.0.0</version>
  <description>A centralized package provides a logging node designed to track and record all operational events of robots </description>
  <maintainer email="ibrahim.hroub7@gmail.com">Ibrahim</maintainer>
  <license>Apache 2.0</license>

  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python3-pymongo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
