<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomy_metrics_webui</name>
  <version>0.1.0</version>
  <description>Web UI package for live autonomy metrics, intervention history, and robustness monitoring.</description>

  <maintainer email="ibrahim.hroub7@gmail.com">Ibrahim</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autonomy_metrics</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-pymongo</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
